# quick-actions

./: .gitignore  ACTIONS_API_GUIDE.md  API_REFACTORING_SUMMARY.md  API_REFACTORING_VERIFICATION.md  ARCHITECTURE_GUIDE.md  DEVELOPMENT_GUIDE.md  DRAG_FIX.md  EVERYTHING_CLI_FIX.md  EVERYTHING_CLI_INTEGRATION.md  FIX_LIST_FILL_CONTAINER.md  FIX_LIST_LAYOUT_AND_SCROLLBAR.md  FIX_SCROLL_DESKTOP_STANDARD.md  FIX_SCROLL_ON_KEY_NAVIGATION.md  FIX_THEME_SETTINGS.md  FUZZY_SEARCH_OPTIMIZATION.md  HEROUI_REFACTORING_COMPLETE.md  HEROUI_REFACTORING_SUMMARY.md  HEROUI_SETTINGS_REFACTORING_PROGRESS.md  HEROUI_V3_THEME_REFACTORING_COMPLETE.md  MULTI_WINDOW_ARCHITECTURE.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  QUICK_REFERENCE_HEROUI_THEME.md  SEARCH_BAR_BORDERLESS_OPTIMIZATION.md  SPOTLIGHT_ANIMATION.md  STARTUP_PERFORMANCE_GUIDE.md  THEME_REFACTORING_SUMMARY.md  THEME_TESTING_GUIDE.md  WINDOW_TEST_GUIDE.md  package.json  plugin.html  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.lingma/agents/: codereview-agent.md  implementation-agent.md  planning-agent.md  qa-agent.md
.lingma/conventions/: project-conventions.md  user-conventions.md
.lingma/plans/: acceptance_criteria_plugin_zip_packaging.md  (+10 more)
docs/: MIGRATION_TO_INDEPENDENT_PACKAGING.md  SETTINGS_GUIDE.md  search-interaction-optimization.md  spotlight-animation-optimization.md  window-animation-refactor.md
plugins/: HTTP_API_GUIDE.md  TROUBLESHOOTING.md  VITE_CONFIG_TEMPLATE.md
scripts/: create-plugin.js  pack-plugin.js
src/: App.css  App.tsx  PluginApp.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  test_sdk.rs
src-tauri/capabilities/: default.json
src-tauri/examples/: test_everything_sdk.rs
src-tauri/src/: commands.rs  everything_ext.rs  lib.rs  main.rs  plugin_api.rs  plugin_installer.rs  plugin_manager.rs  plugin_registry.rs  process_manager.rs
(+154 files in other folders)
