[package]
name = "quick-actions"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "quick_actions_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Dwm",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_Ole",
] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-fs = "2"
arboard = "3.4"
tauri-plugin-shell = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
walkdir = "2"
dirs = "5"
notify = "6"
pinyin = "0.10"
reqwest = { version = "0.11", features = ["blocking", "json"] }
urlencoding = "2.1"
window-vibrancy = "0.6"
base64 = "0.21"
scopeguard = "1.2"
winapi = { version = "0.3.9", features = ["shellapi", "commctrl", "wingdi", "winuser", "winbase", "windef", "winnt", "wincon", "fileapi", "minwindef", "shobjidl", "objbase", "objidl", "combaseapi", "unknwnbase", "dwmapi"] }
image = "0.24"
windows = { version = "0.52", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }

